# pass-manager

./: .env  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2024-05-30-131053_users/: down.sql  up.sql
src/: guards.rs  main.rs  models.rs  schema.rs
src/endpoints/: auth.rs  get_vault.rs  mod.rs  register.rs  update_key.rs  update_vault.rs
