[package]
name = "pass-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1" }
simplelog = "0.12.2"
log = "0.4.21"
diesel = { version = "2.1.6", features = ["postgres"]}
dotenvy = "0.15.7"
hex = "0.4.3"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool", "postgres_pool"]